fix: make footer stick to bottom of viewport.

--- a/client/src/components/layouts/layout.css
+++ b/client/src/components/layouts/layout.css
@@ -594,5 +594,9 @@ pre code {
   }
 }
 .default-layout {
+  display: flex;
+  flex-direction: column;
   margin-top: var(--header-height);
+  margin-top: var(--header-height);
+  min-height: calc(100vh - var(--header-height));
 }
