--- a/client/src/components/search/searchBar/searchbar.css
+++ b/client/src/components/search/searchBar/searchbar.css
@@ -2,11 +2,18 @@
   flex-grow: 1;
   padding: 0 10px;
   max-height: 33px;
+  font-family: 'Lato', sans-serif;
+}
+
+.ais-SearchBox-input {
+  padding: 0.15rem 1.7rem;
+  font-size: 17px;
 }
 
 .fcc_searchBar .ais-SearchBox-input,
 .fcc_searchBar .ais-Hits {
-  background-color: var(--quaternary-background);
+  background-color: var(--gray-75);
+  color: var(--gray-00);
 }
 
 .fcc_searchBar .ais-SearchBox-form {
@@ -49,25 +56,31 @@
   font-weight: bold;
 }
 
-.fcc_searchBar .fcc_suggestion_item {
-  padding: 10px;
+.ais-Highlight-nonHighlighted {
+  font-weight: 300;
 }
+
 .fcc_hits_wrapper {
   display: flex;
   justify-content: center;
 }
+
 .fcc_suggestion_item {
   display: block;
-  padding: 1rem;
-  color: var(--secondary-color);
+  padding: 8px;
+  color: var(--gray-00);
+  text-decoration: none;
 }
+
 .fcc_suggestion_item [class^='ais-'] {
   font-size: 17px;
 }
+
 .fcc_suggestion_item:hover {
-  background-color: var(--highlight-background);
+  background-color: var(--blue-dark);
   cursor: pointer;
 }
+
 .fcc_sr_only {
   position: absolute;
   width: 1px;
@@ -77,4 +90,30 @@
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+}
+
+/* Dropdown footer */
+.fcc_suggestion_footer {
+  border-top: 1.5px solid var(--gray-00);
+}
+
+.fcc_suggestion_footer .hit-name .ais-Highlight .ais-Highlight-nonHighlighted {
+  font-weight: bold;
+}
+
+/* Show only the first 5 hits on mobile */
+.ais-Hits-list .ais-Hits-item:nth-child(n + 6) {
+  display: none;
+}
+
+/* Ensure the dropdown footer is always visible */
+.ais-Hits-list .ais-Hits-item:nth-child(9) {
+  display: block;
+}
+
+@media (min-width: 767px) and (min-height: 768px) {
+  /* Show hits 6-8 on desktop and some tablets */
+  .ais-Hits-list .ais-Hits-item:nth-child(n + 6) {
+    display: block;
+  }
 }
